gccida/g1/simplify_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3282:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v1; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3283:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3290:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3297:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3298:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3304:41: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return simplify_relational_operation( ( rtx_code)*( _WORD *)x, v9, v8.rtx, ( rtx)v7); 
                                        ^~~~~~~~
                                        rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3304:50: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
return simplify_relational_operation( ( rtx_code)*( _WORD *)x, v9, v8.rtx, ( rtx)v7); 
                                      ~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3317:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3319:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3326:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)x, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3326:12: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
( rtx_code)*( _WORD *)x, 
~~~~~~~~~~~^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3327:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3328:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3330:9: error: expected expression
*( rtx *)&x[1], 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3333:58: error: expected expression
if ( swap_commutative_operands_p( x->fld[0].rtx, *( rtx *)&x[1]) ) 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3336:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3341:66: error: expected expression
return simplify_binary_operation( v1, v2, x->fld[0].rtx, *( rtx *)&x[1]); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3346:66: error: expected expression
return simplify_binary_operation( v1, v2, x->fld[0].rtx, *( rtx *)&x[1]); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/simplify-rtx.c:3349:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)*( _WORD *)x, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_rtx/src/obj/simplify-rtx.o] Error 1
